# PJA-ASI-12C-GR1

./: .gitignore  Dockerfile  README.md  deploy_info.rtf  pyproject.toml  requirements.txt  stats.json  test.yml
AutogluonModels/ag-20240520_113927/: learner.pkl
AutogluonModels/ag-20240520_113955/: learner.pkl
AutogluonModels/ag-20240520_114105/: learner.pkl
AutogluonModels/ag-20240520_114223/: learner.pkl
AutogluonModels/ag-20240520_114403/: learner.pkl
AutogluonModels/ag-20240520_114427/: learner.pkl
AutogluonModels/ag-20240521_180145/: learner.pkl
AutogluonModels/ag-20240521_183518/: learner.pkl
AutogluonModels/ag-20240521_185255/: learner.pkl
AutogluonModels/ag-20240521_190045/: learner.pkl  metadata.json
AutogluonModels/ag-20240521_190231/: learner.pkl
AutogluonModels/ag-20240530_111914/: learner.pkl  metadata.json
AutogluonModels/ag-20240601_141606/: learner.pkl
AutogluonModels/ag-20240603_181246/: learner.pkl  metadata.json
AutogluonModels/ag-20240603_181455/: learner.pkl  predictor.pkl
AutogluonModels/ag-20240603_181653/: learner.pkl
asi-kedro/: .gitignore  README.md  pyproject.toml  stats.json
asi-kedro/src/asi_kedro/: __init__.py  __main__.py  settings.py
asi-kedro/src/asi_kedro/pipelines/data_processing/: nodes.py
asi-kedro/src/asi_kedro/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
conf/: create_env_conda.ps1  environment.yml  environmentttt.yml
docs/: Getting started.docx  Getting started.rtf
models/: model.joblib
src/: create_env_conda.ps1  environments.yml
tests/: test_run.py
(+83 files in other folders)
