[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "asi_kedro"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
asi-kedro = "asi_kedro.__main__:main"

[tool.kedro]
package_name = "asi_kedro"
project_name = "ASI_KEDRO"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "asi_kedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
